modify the copying

--- a/index.html
+++ b/index.html
@@ -69,13 +69,22 @@ To compile our code, bison and flex is required. They are used to build a expres
 
 Download the source code,  run Cmake to configure, then make install after successful configuration.  </p>
 <h2>License</h2>
-<p>Kun Jiang,
+<p>Author:
+Kun Jiang,
 Chen Liao,
-XiaoMo Yao</p>
+XiaoMo Yao
+iGem USTC_Software team 2010 All rights reserved
+</p>
 <h2>Authors</h2>
-<p>jiangkun (jkdirac@email.ustc.edu.cn)<br/>liaochen (liaochen@mail.ustc.edu.cn)<br/>retopara (xqqixp@gmail.com)<br/>Mort Yao (yxm1989@hotmail.com)<br/><br/>      </p>
+<p>jiangkun (jkdirac@email.ustc.edu.cn)
+<br/>liaochen (liaochen@mail.ustc.edu.cn)
+<br/>retopara (xqqixp@gmail.com)
+<br/>Mort Yao (yxm1989@hotmail.com)
+<br/>
+<br/>      </p>
 <h2>Contact</h2>
-<p>jkdirac@email.ustc.edu.cn<br/>      </p>
+<p>jkdirac@email.ustc.edu.cn
+<br/>      </p>
 
 
     <h2>Download</h2>
